src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A26.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A26 {
  class A;
  class B;
  class C;
  class D;

  association assoc1 A -> B;
  association assoc1 C <-> D;
}
